initialized git repository

--- a/index1.html
+++ b/index1.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Style1.css">
+
 </head>
 <body>
-    My name is Supreet !!!
+    <section id="Home">
+    <h1>Home</h1>
+    <p id="#title" class="heading red">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum soluta tempora reprehenderit doloremque eius dolore. Maiores, harum alias. Placeat fuga perferendis vel velit fugiat corporis laboriosam qui facere, sunt repellendus!</p>
+    <a href="#Info">Go to Info</a>
+    </section>
+    <section id="Info">
+    <h1>Info</h1>
+    <p class="red">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae voluptatibus in voluptates vel facere! Distinctio nihil quos ipsum dolores consequuntur.</p>
+    <a href="#footer">Go to footer</a>
+    </section>
+    <section id="footer">
+    <h1>Footer</h1>
+    <p class="blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero harum nemo esse reprehenderit consequuntur quaerat error fugit assumenda eveniet illum.</p>
+    <a href="#Home">Back to top</a>
+    </section>
 </body>
 </html>
