--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="box"></div>
+    <div class="box">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, perspiciatis?</div>
     <div class="box-wrapper">
     <div class="box box-small"></div>
     <div class="box box-small"></div>
