initialized git repository

--- a/index4.html
+++ b/index4.html
@@ -11,7 +11,7 @@
     <section id="about-me">
       <nav>
         <div class="personal__logo">Supreet Jasani</div>
-        <ul class="nav__link--list"></ul>
+        <ul class="nav__link--list">
         <li>
           <a href="" class="
           nav__link--anchor
@@ -32,6 +32,7 @@
           nav__link--anchor-primary
           ">Contact</a>
         </li>
+        </ul>
       </nav>
       <div class="flex-1">
       <div class="about-me__info row"> 
@@ -40,7 +41,7 @@
         <img src="./assets/me.jpeg" class="about-me__picture" alt="Pictuer of me">
       </figure>
       <h1 class="about-me__info--title">
-        Hey! I'm <span class="text--purple">Supreet Jasani</span>
+        Hey! I'm <span class="text--purple">Supreet Jasani</span><span class="wave"></span>
       </h1>
       <p class="about-me__info--para">
         I'm a <strong class="text--purple"> frontend software engineer </strong>  with a stond passion for building responsive
@@ -62,7 +63,7 @@
       </div>
       </div>
       <figure class="about-me__img--container">
-        <img src="./Assets/undraw_websites.svg" class="about-me__img=">
+        <img src="./assets/undraw_websites.svg" class="about-me__img=">
       </figure>
       </div>
       </div>
@@ -74,27 +75,27 @@
         <div class="language__list">
         <div class="language">
           <figure class="language__img--wrapper">
-            <img src="./Assets/html.png" alt="" class="language__img">
+            <img src="./assets/html.png" alt="" class="language__img">
           </figure>
           <span class="language__name">HTML</span>
         </div> 
         <div class="language">
           <figure class="language__img--wrapper">
-            <img src="./Assets/html.png" alt="" class="language__img">
+            <img src="./assets/css.png" alt="" class="language__img">
           </figure>
-          <span class="language__name">HTML</span>
+          <span class="language__name">CSS</span>
         </div> 
         <div class="language">
           <figure class="language__img--wrapper">
-            <img src="./Assets/html.png" alt="" class="language__img">
+            <img src="./assets/JavaScript-logo.png" alt="" class="language__img">
           </figure>
-          <span class="language__name">HTML</span>
+          <span class="language__name">Java Script</span>
         </div> 
         <div class="language">
           <figure class="language__img--wrapper">
-            <img src="./Assets/html.png" alt="" class="language__img">
+            <img src="./assets/react.png" alt="" class="language__img">
           </figure>
-          <span class="language__name">HTML</span>
+          <span class="language__name">React</span>
         </div>
           <div class="language">
             <figure class="language__img--wrapper">
@@ -132,7 +133,7 @@
          <ul class="project__list">
           <li class="project">
             <div class="project__wrapper">
-              <img src="./Assets/loopit.png" class="project__img" alt="Car subscription project">
+              <img src="./assets/loopit.png" class="project__img" alt="Car subscription project">
             <div class="project__description">
             <h3 class="project__description--title">Car Sales Project</h3>
             <h4 class="project__description--sub-title">
@@ -202,31 +203,35 @@
   </section>
   <footer>
     <div class="row footer__row">
-      <a href="#">
-        <figure>
+      <a href="#" class="footer__anchor">
+        <figure class="footer__logo">
           <img src="./Assets/logo.svg" class="footer__logo--img" alt="">
         </figure>
+        <span class="footer__logo--popper">
+          Top
+          <i class="fas fa-arrow-up></i>"
+        </span>
       </a>
       <div class="footer__social--list">
         <a href="https://google.com" target="_blank" class="
         footer__social--link
-        link__hover--effect
-        link__hover--effect--white
+        link__hover-effect
+        link__hover-effect--white
         " target="_blank">Github</a>
         <a href="https://google.com" target="_blank" class="
         footer__social--link
-        link__hover--effect
-        link__hover--effect--white
+        link__hover-effect
+        link__hover-effect--white
         " target="_blank">LinkedIn</a>
-        <a href="https://google.com" target="_blank" class="
+        <a href="mailto:email@email.com" target="_blank" class="
         footer__social--link
-        link__hover--effect
-        link__hover--effect--white
+        link__hover-effect
+        link__hover-effect--white
         " target="_blank">Email</a>
-        <a href="https://google.com" target="_blank" class="
+        <a href="./assets/Supreet_Resume 4_11 Complete IT Resume.docx" target="_blank" class="
         footer__social--link
-        link__hover--effect
-        link__hover--effect--white
+        link__hover-effect
+        link__hover-effect--white
         " target="_blank">Resume</a>
       </div>
       <div class="footer__copyright">Copyright © 2023 Supreet Jasani</div>
