--- a/index7.html
+++ b/index7.html
@@ -26,7 +26,7 @@
             <div class="Home Description">
                 
                  <h1>Beautiful React</h1>
-                 <h1>Templates for you</h1>
+                 <h1>Templates for you!!!</h1>
                 <br />
                 <br />
                  <p>Our templates are easy to setup, understand and customize.</p> 
